# AlphaRefinery

./: .gitignore  LICENSE  PROJECT_MAP.md  README.md  README_CN.md  llm_refine_provider_env.example.sh  pyproject.toml  requirements.txt  run_refine.sh  update_panel_from_baostock.sh
artifacts/: README.md
artifacts/autofactorset_ingest/: README.md
artifacts/llm_refine_promotions/: README.md
artifacts/logs/: README.md
artifacts/reports/: README.md
artifacts/runs/: README.md
artifacts/runs/ab_tests/: README.md
artifacts/runs/autofactorset_ingest/: README.md
config/: refinement_seed_pool.yaml
config/factor_manifests/: alpha158.yaml  alpha360.yaml
docs/: family_search_formulation.md
factors_store/: __init__.py  __main__.py  _bootstrap.py  contract.py  data.py  data_paths.py  eval.py  operators.py  registry.py
factors_store/autofactorset_bridge/: __init__.py  batch_import_from_manifest.py  build_alpha_manifest_from_summaries.py  build_seed_baseline_manifest.py  evaluate_registry_manifest.py  evaluate_seed_baselines.py  rebuild_library_from_db.py
factors_store/factors/: __init__.py  _pattern_retrieval.py  alpha101_like.py  alpha158_like.py  alpha191_like.py  alpha360_like.py  cicc_daily.py  factor365_daily.py  factor365_pattern.py  gp_mined.py  qp_behavior.py  qp_chip.py  qp_kline.py  qp_momentum.py  qp_path_convexity.py  qp_pressure.py  qp_salience.py  qp_volatility.py  seed_baselines.py
factors_store/llm_refine/: README.md  __init__.py  config.py
scripts/: build_stage_transition_eval_set.py  bulk_insert_ovc_factors.py
(+128 files in other folders)
