[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpharefinery"
version = "0.1.0"
description = "LLM-augmented alpha factor refinement framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "pyarrow>=14.0",
    "openai>=1.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
performance = [
    "numba>=0.59",
]

[tool.setuptools.packages.find]
include = ["factors_store*"]
